--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         </div>
         <div class="banner-section">
-            <img src="assets/Banner-1.jpg" alt="banner" />
+            <img src="Banner-1.jpg" alt="banner" />
         </div>
         <div>
             <h2>New Products</h2>
@@ -37,43 +37,43 @@
         <div class="category-section">
             <ul>
                 <li>
-                    <img src="assets/Categories/laptop.jpg" />
+                    <img src="laptop.jpg" />
                     <span>Laptop</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/camera.jpg" />
+                    <img src="camera.jpg" />
                     <span>Camera</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/Ac.jpg" />
+                    <img src="Ac.jpg" />
                     <span>AC</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/fridge.jpg" />
+                    <img src="fridge.jpg" />
                     <span>Fridge</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/ipods.jpg" />
+                    <img src="ipods.jpg" />
                     <span>Ipod</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/phone.png" />
+                    <img src="phone.png" />
                     <span>Phone</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/speakers.jpg" />
+                    <img src="speakers.jpg" />
                     <span>SPeakers</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/Tv.jpg" />
+                    <img src="Tv.jpg" />
                     <span>TV</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/watch.jpg" />
+                    <img src="watch.jpg" />
                     <span>Watch</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/tabs.jpg" />
+                    <img src="tabs.jpg" />
                     <span>Tabs</span>
                 </li>
             </ul>
@@ -94,63 +94,63 @@
                     <a href="headphones.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-headP.png" alt="" />
+                            <img src="arr-headP.png" alt="" />
                             <span>Boat Head Phones</span>
                         </li>
                     </a>
                     <a href="ipod.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-ipod.jpg" alt="" />
+                            <img src="arr-ipod.jpg" alt="" />
                             <span>Apple IPods</span>
                         </li>
                     </a>
                     <a href="mixer.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-mixer.jpg" alt="" />
+                            <img src="arr-mixer.jpg" alt="" />
                             <span>Usha Mixer Giant</span>
                         </li>
                     </a>
                     <a href="mobile.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-mobile.png" alt="" />
+                            <img src="arr-mobile.png" alt="" />
                             <span>Samsung Mobiles </span>
                         </li>
                     </a>
                     <a href="speaker.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-speaker.jpg" alt="" />
+                            <img src="arr-speaker.jpg" alt="" />
                             <span> Sony Speakers</span>
                         </li>
                     </a>
                     <a href="tabs.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-tab.jpg" alt="" />
+                            <img src="arr-tab.jpg" alt="" />
                             <span>Apple Tablets</span>
                         </li>
                     </a>
                     <a href="trimmer.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-trimmer.png" alt="" />
+                            <img src="arr-trimmer.png" alt="" />
                             <span>Philips Trimmer</span>
                         </li>
                     </a>
                     <a href="tv.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-watch.jpg" alt="" />
+                            <img src="arr-watch.jpg" alt="" />
                             <span>Apple Smart Watch</span>
                         </li>
                     </a>
                     <a href="laptop.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-laptop.png" alt="" />
+                            <img src="arr-laptop.png" alt="" />
                             <span>Dell Laptop</span>
                         </li>
                     </a>
@@ -159,22 +159,22 @@
             </div>
         </div>
         <div class="banner-2">
-            <img src="assets/Banner-2.jpg" alt="">
+            <img src="Banner-2.jpg" alt="">
         </div>
         <div class="discount-section">
-            <img src="assets/Discount/disc-1.jpg" alt="">
-            <img src="assets/Discount/disc-2.jpg" alt="">
-            <img src="assets/Discount/disc-3.jpg" alt="">
-            <img src="assets/Discount/disc-4.jpg" alt="">
-            <img src="assets/Discount/disc-5.jpg" alt="">
-            <img src="assets/Discount/disc-6.jpg" alt="">
-            <img src="assets/Discount/disc-7.jpg" alt="">
-            <img src="assets/Discount/disc-8.jpg" alt="">
-            <img src="assets/Discount/disc-9.jpg" alt="">
-            <img src="assets/Discount/disc-10.jpg" alt="">
+            <img src="disc-1.jpg" alt="">
+            <img src="disc-2.jpg" alt="">
+            <img src="disc-3.jpg" alt="">
+            <img src="disc-4.jpg" alt="">
+            <img src="disc-5.jpg" alt="">
+            <img src="disc-6.jpg" alt="">
+            <img src="disc-7.jpg" alt="">
+            <img src="disc-8.jpg" alt="">
+            <img src="disc-9.jpg" alt="">
+            <img src="disc-10.jpg" alt="">
         </div>
         <div class="footer">
-            <img src="assets/footer.png" alt="">
+            <img src="footer.png" alt="">
         </div>
     </div>
 
