--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <ul>
                     <a href="Aircondition.html">
                         <li>
-                            <img src="assets/Arrival/arr-ac.jpg" alt="" />
+                            <img src="arr-ac.jpg" alt="" />
                             <span>Samsung Split Ac 4 Star </span>
                         </li>
                     </a>
