--- a/laptop.html
+++ b/laptop.html
@@ -28,7 +28,7 @@
 
     <div class="product-detail">
         <div class="pro-left">
-            <img src="assets/Arrival/arr-laptop.png" alt="">
+            <img src="arr-laptop.png" alt="">
         </div>
         <div class="pro-right">
             <h4>
