--- a/tv.html
+++ b/tv.html
@@ -28,7 +28,7 @@
 
     <div class="product-detail">
         <div class="pro-left">
-            <img src="assets/Arrival/arr-watch.jpg" alt="">
+            <img src="arr-watch.jpg" alt="">
         </div>
         <div class="pro-right">
             <h4>
